[package]
name = "crabcan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
nix = { version = "0.27.1", features = [
    "user",
    "socket",
    "process",
    "sched",
    "hostname",
    "dir",
    "mount",
    "user",
] }
rand = "0.8.5"
scan_fmt = "0.2.6"
thiserror = "1.0.51"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
